[tool.poetry]
name = "system-stats-log"
version = "0.1.0"
description = "logs system statistics into a TSV file"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.1"
pythonping = "^1.1.1"
WMI = {version = "^1.5.1", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
